# QtWhiteBase

./: README.md
WhiteBase/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Version.h.in  WhiteBase.qrc  WhiteBase.rc.in
WhiteBase Doc/: WhiteBase Stories.odp  WhiteBase UserGuide.odt
